--- a/src/main/resources/templates/mahasiswa/pengajuan_list.html
+++ b/src/main/resources/templates/mahasiswa/pengajuan_list.html
@@ -333,7 +333,7 @@
       </a>
     </li>
     <li>
-      <a th:href="@{/mahasiswa/pengajuan}">
+      <a th:href="@{/mahasiswa/pengajuan/list}">
         <i class="fas fa-list"></i> Daftar Pengajuan
       </a>
     </li>
